--- a/content/posts/轻量化文档.md
+++ b/content/posts/轻量化文档.md
@@ -1,13 +1,13 @@
-  ---
-  author: "Konpaku Youran"
-  title: "GTCRN轻量化方案"
-  date: "2026-02-13"
-  description: "GTCRN-> GTCRN Light "
-  tags: ["算法", "机器学习","GTCRN"]
-  categories: ["音频算法"]
-  ShowToc: true        # 显示目录
-  TocOpen: true        # 默认展开目录
-  ---
+---
+author: "Konpaku Youran"
+title: "GTCRN轻量化方案"
+date: "2026-02-13"
+description: "GTCRN-> GTCRN Light "
+tags: ["算法", "机器学习","GTCRN"]
+categories: ["音频算法"]
+ShowToc: true
+TocOpen: true
+---
 
 
 # GTCRN-Light v3 技术说明书
